fixed alignment & added small devices support

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,5 +1,5 @@
 header{
-    height: 100vh;
+    height: 130vh;
     padding-top: 7rem;
     overflow: hidden;
 }
@@ -24,7 +24,7 @@ header{
     gap: 0.8rem;
     position: absolute;
     left: 0;
-    bottom: rem;
+    bottom: 3rem;
 }
 
 .header__socials::after{
@@ -41,9 +41,38 @@ header{
     width: 22rem;
     height: 30rem;
     position: absolute;
-    left: calc(50%-11rem);
+    left: 50%;
+    transform: translateX(-50%);
     margin-top: 4rem;
+    text-align: center;
     border-radius: 12rem 12rem 0 0;
     overflow: hidden;
     padding: 5rem 1.5rem 1.5rem;
+}
+/* scroll down */
+.scroll__down{
+    position: absolute;
+    right: -2.3rem;
+    bottom: 5rem;
+    transform: rotate(90deg);
+    font-weight: 300;
+    font-size: 0.9rem;
+}
+
+/* media queries (medium devices) */
+@media screen and(max-width:1024px){
+    header{
+        height: 68vh;
+    }
+}
+
+/* media queries (small devices) */
+@media screen and(max-width:600px){
+    header{
+        height: 100vh;
+    }
+    .header__socials,
+    .scroll__down{
+        display: none;
+    }
 }
